--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "dev": "concurrently \"npm start\" \"cd backend && . .venv/bin/activate && uvicorn src.main:app --reload --host 0.0.0.0 --port 8000\""
+    "dev": "concurrently \"npm start\" \"cd backend && . .venv/bin/activate && python -m uvicorn src.main:app --reload --host 0.0.0.0 --port 8000\""
   },
   "dependencies": {
     "@docusaurus/core": "3.9.2",
