--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-  "builds": [
-    {
-      "src": "backend/src/main.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/backend/src/main.py"
-    }
-  ]
+    "builds": [
+        { "src": "/backend/src/main.py", "use": "@vercel/python" }
+    ],
+    "rewrites": [
+        { "source": "/api/(.*)", "destination": "/api" }
+    ]
 }
